src/objects/AMS_Employee__c.object
<CustomObject>
    <fields>
        <fullName>Account_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Role</label>
        <referenceTo>AMS_Account_Role__c</referenceTo>
        <relationshipLabel>Agency Employees (AMS)</relationshipLabel>
        <relationshipName>Agency_Employees_AMS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agency Employees (AMS)</relationshipLabel>
        <relationshipName>Agency_Employees_AMS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency</label>
        <referenceTo>AMS_Agency__c</referenceTo>
        <relationshipLabel>Agency Employees (AMS)</relationshipLabel>
        <relationshipName>Agency_Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Agency Employees (AMS)</relationshipLabel>
        <relationshipName>Agency_Employees_AMS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DUTY__c</fullName>
        <inlineHelpText>A :
I :
X :
Z :</inlineHelpText>
        <label>Duty</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Earning__c</fullName>
        <inlineHelpText>1 :
2 :
3 :</inlineHelpText>
        <label>Earning</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employee_type__c</fullName>
        <label>Employee type</label>
        <picklist>
            <picklistValues>
                <fullName>CL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RG</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <inlineHelpText>1 :
2 :
3 :
4 :
5 :
6 :</inlineHelpText>
        <label>Hours</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_synchronization__c</fullName>
        <label>Last synchronization</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy External Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_System__c</fullName>
        <label>Legacy System</label>
        <picklist>
            <picklistValues>
                <fullName>AIMS1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIMS2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIMS3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WEBSTAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAIMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Migration_Executed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Migration Executed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Person__c</fullName>
        <label>Person</label>
        <referenceTo>AMS_Person__c</referenceTo>
        <relationshipLabel>Agency Employees (AMS)</relationshipLabel>
        <relationshipName>Agency_Employees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <inlineHelpText>0  :
A  ;
B  :
C  :
D  :
E  :
F  :
G :
H :
I   :
L  :
M :
O :
P  :
R :
S  :</inlineHelpText>
        <label>Position</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Registration_Date__c</fullName>
        <label>Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SIMPLEX__c</fullName>
        <description>Simplex vernum for IDCAD</description>
        <externalId>true</externalId>
        <label>SIMPLEX</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <inlineHelpText>0 :
1 :
2 :
3 :
4 :
5 :
6 :
7 :
8 :</inlineHelpText>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_date__c</fullName>
        <label>Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <label>Title</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isManager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isTicketingAgent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Ticketing Agent</label>
        <type>Checkbox</type>
    </fields>
    <label>Agency Employee (AMS)</label>
    <nameField>
        <label>AMS Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agency Employees (AMS)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>